--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,16 @@
 {
     "name": "laravel/lumen",
     "description": "The Laravel Lumen Framework.",
-    "keywords": ["framework", "laravel", "lumen"],
+    "keywords": [
+        "framework",
+        "laravel",
+        "lumen"
+    ],
     "license": "MIT",
     "type": "project",
     "require": {
         "php": "^7.3|^8.0",
+        "firebase/php-jwt": "^5.3",
         "laravel/lumen-framework": "^8.0"
     },
     "require-dev": {
